# Data-Science-8th-sem

./: day1intro.py  day2.py  orange data processing UI.ows  pyproject.toml
TitanicDatasetAnalysis/: Day3Titanicdataanalysis.py  pyproject.toml
day05Outliers/: outlierDay05.ipynb  pyproject.toml
day06Scaling/: pyproject.toml  scaling.ipynb  scipytTest.ipynb
day07Correlation/: PracticeProjectInsurance.ipynb  pyproject.toml
day08FastAPIStreamlit/: api.py  app.py  pyproject.toml
day09LinearRegression/: linearRegression.ipynb  pyproject.toml
day10MultiplePolyReg/: PloynomialReg.ipynb  multiplePolyReg.ipynb  pyproject.toml
day11DecisionTree/: DecisionTree.ipynb  pyproject.toml
day12ConfusionMatrix/: confusionMatrix.ipynb  pyproject.toml
day13KmeanClustering/: kMeanClustering.ipynb  predict.xlsx  pyproject.toml
day14NeuralNetwork/: classification_using_neural_network.ipynb  pyproject.toml  simple_linear_regresssion_using_neural_network.ipynb
jupyternotebook04/: day4.ipynb  pyproject.toml
numpyAndPandas/: arraysave.npy  day3.py  pyproject.toml
